# sunck

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCKER_SANDBOX_ANALYSIS.md  ENV_CHECK.md  OPTIMIZATION_REPORT.md  OPTION_A.md  PyCharm运行排障与启动指南.md  README.deploy.md  README.md  STRESS_TEST_REPORT.md  __main__.py  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  requirements.lock.txt  requirements.txt  前后端独立启动与排障指南.md
alembic/: env.py
app/: config.py  main.py
deploy/: README.deploy.md  grafana-dashboard.json  nginx.conf  nginx.tls.conf  prometheus.docker.yml  prometheus.yml  rail-monitor-api.service  rail-monitor-backup.service  rail-monitor-backup.timer  rail-monitor-simulator.service  smoke_drill.sh
docs/: ROADMAP.md
scripts/: backtest_scoring.py  device_simulator.py  env_check_result.json  locustfile.py  mqtt_flood.py  native-services.sh  realtime_integration.py  run_demo.sh  seed_demo.py  seed_history_alarms.py  seed_rbac.py  seed_stress.py  smoke_test.py  snapshot_job.py  verify_env.py  verify_rule_engine_v2.py  verify_simulator_geo.py
tests/: conftest.py  helpers.py  test_alarm_correlation.py  test_alarm_lifecycle.py  test_alarm_pagination.py  test_alarm_report.py  test_alarm_to_hazard.py  test_attachments.py  test_audit_log.py  test_auth.py  test_captcha.py  test_clock.py  test_config_guard.py  test_crud_service.py  test_dashboard_aggregation.py  test_dashboard_scope.py  test_data_scope.py  test_db_pool_metrics.py  test_departments.py  test_devices.py  test_dict.py  test_fences.py  test_functional_modules.py  test_hazard.py  (+24 more)
(+237 files in other folders)
